--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.btnCategory{
+    @apply bg-white text-dark font-normal text-sm rounded-3xl mx-2 flex flex-row align-middle w-1/4 py-2 hover:cursor-pointer hover:translate-y-2 duration-200;
+}
